* StrongAi, Cleaned out unused code. Minor tweak to getStrengthOfPotentialAttackers. (Kevin Moore)

* Fix bug in zip url parsing (Stephen Gallagher)

* StrongAi, Fix bug in ship movement. Modify territory selection for non-combat transports (Kevin Moore)

* fix bug where paratroops could walk on water, bug 2867358 (sgb)

* remove isParatroop UnitAttachmant property. (sgb) 

* fix Allied fighter on AC bug, bug 2890919 (sgb)

* fix infinite loop in odds calculator, bug  2853353 (sgb)

* better logic for determining which odds calculator player should be used if no units are in the territory (sgb)

* better isolation of units in odd calculator from units in the game (bug 2820761) (sgb)

* download file notes shows top of notes by default now, rather than scrolling to the middle (sgb)

Changes for 1.1.0

* update StrongAI files for PUs (ComradeKev)

* update to substance 5.3 (sgb)

* remove troublesome maps (sgb)

* Add code to allow downloading and installing games from the network.  An Exampe site is here, 
  http://sites.google.com/site/tripleadownloadexamples/    (sgb)

* add utility for updating game.xml files (sgb)

* Strong AI Changes  (Kevin Moore)
  -Handles Neutrals correctly.
  -Switched all decision making to a territory ranking system which is consistent throughout the AI
  -Eliminated expectations that movement will be under revised/AA50 limits.
  -Cleaned up handling of units around a threatened capital
  -Improved blitzing and transport invading


* Scrub Production Units (PUs)(ComradeKev)

* Fix bug 2827014 Air forces route through impassables if length = valid sea route (ComradeKev)

* Fix bug 2829876 BB bombards when only air attacking from SZ (ComradeKev)

* Fix bug 2827394 renamed Neutral.GIF to Neutral.gif (ComradeKev)

* Fix  bug 2820547 faulty mechanized inf and paratroop capacity (ComradeKev)

* Scrub xml and source (ComradeKev)

* fix bug 2818614 include substance jar in build.xml (Seidelin)
